[gd_scene load_steps=10 format=3 uid="uid://cdjqqqfj3nkgd"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_27bwf"]
[ext_resource type="Script" path="res://Scripts/VolumeSlider.gd" id="2_bhnht"]
[ext_resource type="AudioStream" uid="uid://l66575pshppl" path="res://PrivateDevRoom/Ice Cream Truck.mp3" id="3_tw70m"]

[sub_resource type="SystemFont" id="SystemFont_1cxx3"]
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_d1ooj"]
default_font = SubResource("SystemFont_1cxx3")
default_font_size = 64

[sub_resource type="Theme" id="Theme_s2q5k"]
default_font_size = 60

[sub_resource type="Theme" id="Theme_fyhjo"]
default_font_size = 60

[sub_resource type="Theme" id="Theme_osyp5"]
default_font_size = 50

[sub_resource type="Theme" id="Theme_4hbox"]
default_font_size = 30

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_27bwf")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.313726)

[node name="BoxContainer" type="BoxContainer" parent="."]
offset_left = 67.0
offset_top = 24.0
offset_right = 507.0
offset_bottom = 567.0
alignment = 1
vertical = true

[node name="StartGame" type="Button" parent="BoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = SubResource("Theme_d1ooj")
text = "Play"

[node name="Credits" type="Button" parent="BoxContainer"]
custom_minimum_size = Vector2(80, 100)
layout_mode = 2
theme = SubResource("Theme_s2q5k")
text = "Credits"

[node name="Main menu" type="Button" parent="BoxContainer"]
visible = false
custom_minimum_size = Vector2(80, 100)
layout_mode = 2
theme = SubResource("Theme_s2q5k")
text = "Main menu"

[node name="Quit" type="Button" parent="BoxContainer"]
custom_minimum_size = Vector2(80, 100)
layout_mode = 2
theme = SubResource("Theme_fyhjo")
text = "Quit"

[node name="HSlider" type="HSlider" parent="."]
offset_left = 1100.0
offset_top = 256.0
offset_right = 1560.0
offset_bottom = 272.0
max_value = 2.0
step = 0.05
value = 1.0
script = ExtResource("2_bhnht")

[node name="VolumeLabel" type="Label" parent="."]
offset_left = 1116.0
offset_top = 166.0
offset_right = 1394.0
offset_bottom = 235.0
theme = SubResource("Theme_osyp5")
text = "Volume:"

[node name="MouseLabel" type="Label" parent="."]
visible = false
offset_left = 1120.0
offset_top = 348.0
offset_right = 1554.0
offset_bottom = 417.0
theme = SubResource("Theme_osyp5")
text = "Mouse sensitivity:"

[node name="Sens" type="HSlider" parent="."]
visible = false
offset_left = 1100.0
offset_top = 450.0
offset_right = 1560.0
offset_bottom = 466.0
max_value = 1.0
step = 0.05
script = ExtResource("2_bhnht")

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_tw70m")
autoplay = true

[node name="Credits" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -7.0
offset_top = -5.0
offset_right = 1934.0
offset_bottom = 2268.0

[node name="Bcgr" type="ColorRect" parent="Credits"]
layout_mode = 0
offset_right = 1932.0
offset_bottom = 2221.0
color = Color(0.176419, 0.176419, 0.176419, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Credits"]
layout_mode = 0
offset_left = 765.0
offset_top = 1150.0
offset_right = 1210.0
offset_bottom = 1688.0
theme = SubResource("Theme_4hbox")
text = "Worked on the game:

Code:
Agile Sloth
Trumasterdragon2

Art and 3D models:
Mike3D"

[connection signal="pressed" from="BoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="BoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="BoxContainer/Main menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="BoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="HSlider" to="HSlider" method="_on_value_changed"]
